try to add image

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,9 @@ set(CMAKE_CXX_STANDARD 17)
 
 add_executable(learn main.cpp
         src/huffman.cpp
-        include/huffman.h)
+        include/huffman.h
+        src/huffmanimage.cpp
+        include/huffman_image.h)
 include_directories(${CMAKE_SOURCE_DIR}/include)
 
 
