adding compress 8 bit image

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,9 +6,12 @@ set(CMAKE_CXX_STANDARD 17)
 add_executable(learn main.cpp
         src/huffman.cpp
         include/huffman.h
-        src/huffmanimage.cpp
-        include/huffman_image.h)
+        src/huffmanImage.cpp
+        include/huffmanImage.h
+)
 include_directories(${CMAKE_SOURCE_DIR}/include)
 
 
 configure_file(input.txt input.txt COPYONLY)
+configure_file(Harry_Potter.txt Harry_Potter.txt COPYONLY)
+configure_file(10mb.json 10mb.json COPYONLY)
