--- a/LZW/CMakeLists.txt
+++ b/LZW/CMakeLists.txt
@@ -3,4 +3,4 @@ project(LZW)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(LZW main.cpp)
+add_executable(LZW main.cpp GIF.cpp GIF.h Text.h Text.cpp Video.h Video.cpp)
